--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ permalink: pretty
 highlighter: rouge
 
 markdown_ext: "md"
-markdown: redcarpet
-redcarpet:
-  extensions: ["tables", "fenced_code_blocks"]
+markdown: kramdown
+kramdown:
+  input: GFM
+  auto_ids: true
+  syntax_highlighter: rouge
